tests/invalid/simple/While_CompileFail_7.whiley
[void] extract([int] ls):
    int i = 0
    [int] r = [1]
    // now do the reverse!
    while i < |ls| where |r| < 2:
        r = []
    return r
